# riscv-swift-os

./: .gitignore  Makefile  README.md  a.swift  b.swift  build.sh  build1_check_asm.sh
DirectMake/: Makefile  asm.c  boot.c  kernel.ld  kernel.swift  obj.asm  std.c
DirectMake/LL/: asm.c  swift_assist.c  will_remove.c
DirectMake/LL/include/: kernel.h  module.modulemap  swift_assist.h  will_remove.h
DirectMake/ll/: ll.h  module.modulemap
DirectMake/swift/: Asobi.swift  FixedArray.swift  Kernel.swift  PageTable.swift  Process.swift  Std.swift  String+.swift  Volatile+.swift
HowToSwiftCompiler/: Makefile
SwiftPackages/: Package.resolved  Package.swift
SwiftPackages/Sources/OperatingSystem/: OperatingSystem.swift
docs/: RISC-V32bitの始め方の参考.md  Unicodeの利用について.md  コマンドラインあれこれ.md
riscv-embedded-swift.xcodeproj/: project.pbxproj
tiny-os/: CMakeLists.txt  Makefile  configure.sh  kernel.ld  utils.sh
tiny-os/.build/: kernel.elf  kernel.map
tiny-os/LowLevel/: libc.c  mem.c  will_remove.c
tiny-os/LowLevel/include/: kernel.h  libc.h  mem.h  module.modulemap
tiny-os/Swift/: Asobi.swift  Kernel.swift  PageTable.swift  Process.swift  Std.swift  Volatile+.swift
tiny-os/riscv-embedded-swift.xcodeproj/: project.pbxproj
tiny-os/riscv-embedded-swift.xcodeproj/xcshareddata/xcschemes/: riscv-embedded-swift.xcscheme
